deleting the pycache and adding updates to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,12 @@ venv
 superuser.txt
 session.nvim
 static/*.*
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# C extensions
+*.so
+
